# SImple-CNN-With-CICD

./: .gitignore  LICENSE  README.md  init_setup.sh  params.yaml  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  template.py
configs/: config.yaml
research/: stage01.ipynb  trails.ipynb
src/CnnDeepClassifier/: __init__.py
src/CnnDeepClassifier/components/: __init__.py  data_ingestion.py
src/CnnDeepClassifier/config/: __init__.py  configuration.py
src/CnnDeepClassifier/constants/: __init__.py
src/CnnDeepClassifier/entity/: __init__.py  config_entity.py
src/CnnDeepClassifier/pipeline/: stage_01_data_ingestion.py
src/CnnDeepClassifier/utils/: __init__.py  common.py
