[metadata]
license = MIT
license_file = LICENSE
classifier = 
    Programming Language :: Python :: 3.8
    Operating System :: OS Independent

[options]
install_requires = 
    ensure==1.0.2
python_requires = >=3.7

[options.extras_require]
testing = 
    pytest>=7.1.3   # unit test and integreation test
    mypy>=0.971     # typing error
    flake8>=5.0.4   # deteact extra space etc. in file
    tox>=3.25.1     # test your application locally create diffrent working environment
    black>=22.8.0   # formatting application python structure

[option.package_data]
CnnDeepClassifer = py.typed

[flake8]
max-line-length = 160
exclude = __init__.py

